--- a/awty/app/src/main/AndroidManifest.xml
+++ b/awty/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.uw.awty">
 
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Awty">
+        <activity
+            android:name=".SMS"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
